Use TinyXML to parse XML files.

--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -5,6 +5,6 @@ add_subdirectory(Catch)
 add_subdirectory(FuseUtils)
 add_subdirectory(LibSpectrum)
 add_subdirectory(LZSA)
-add_subdirectory(RapidXML)
+add_subdirectory(TinyXML)
 add_subdirectory(ZX0)
 add_subdirectory(ZX7)
