Working to implement #repeat macro.

--- a/Sources/Tests/CMakeLists.txt
+++ b/Sources/Tests/CMakeLists.txt
@@ -24,6 +24,7 @@ add(Tests
         IfTests.cpp
         LabelTests.cpp
         OpcodeTests.cpp
+        RepeatTests.cpp
         main.cpp
     )
 
