Implemented #ensure macro.

--- a/Sources/Compiler/CMakeLists.txt
+++ b/Sources/Compiler/CMakeLists.txt
@@ -37,6 +37,8 @@ add(Compiler
         Assembler/Label.h
         Assembler/MacroIf.cpp
         Assembler/MacroIf.h
+        Assembler/MacroEnsure.cpp
+        Assembler/MacroEnsure.h
         Assembler/MacroRepeat.cpp
         Assembler/MacroRepeat.h
         Compression/Compression.h
