Started to implement SDL2 runtime.

--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(Bas2Tap)
 add_subdirectory(Catch)
 add_subdirectory(FuseUtils)
 add_subdirectory(LibSpectrum)
+add_subdirectory(SDL2)
 add_subdirectory(LZSA)
 add_subdirectory(TinyXML)
 add_subdirectory(ZX0)
