--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(Common)
 add_subdirectory(Compiler)
 add_subdirectory(GUI)
 add_subdirectory(Java)
+add_subdirectory(Runtimes)
 add_subdirectory(Tests)
