Started to implement Z80 snapshot writer.

--- a/Sources/Compiler/CMakeLists.txt
+++ b/Sources/Compiler/CMakeLists.txt
@@ -108,6 +108,8 @@ add(Compiler
         Output/LibSpectrum/VirtualFile.cpp
         Output/LibSpectrum/VirtualFile.h
         Output/IOutputWriter.h
+        Output/SpectrumSnapshotWriter.cpp
+        Output/SpectrumSnapshotWriter.h
         Output/SpectrumTapeWriter.cpp
         Output/SpectrumTapeWriter.h
         Output/TRDOSWriter.cpp
