Working on SDL2 runtime.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ project(RetroToolkit)
 include(CMake/Common.cmake)
 include(CMake/Bin2C.cmake)
 
-set_directory_properties(PROPERTIES VS_STARTUP_PROJECT "RetroToolkit")
+if(NOT EXCLUDE_GUI)
+    set_directory_properties(PROPERTIES VS_STARTUP_PROJECT "RetroToolkit")
+else()
+    set_directory_properties(PROPERTIES VS_STARTUP_PROJECT "SDL2Runtime")
+endif()
 
 add_subdirectory(Libs)
 add_subdirectory(Sources)
