--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory(LibSpectrum)
 add_subdirectory(SDL2)
 add_subdirectory(LZSA)
 add_subdirectory(TinyXML)
+add_subdirectory(Z80)
 add_subdirectory(ZX0)
 add_subdirectory(ZX7)
