--- a/Libs/Z80/CMakeLists.txt
+++ b/Libs/Z80/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
+if(FALSE)
 
 include(CheckCXXCompilerFlag)
 
@@ -59,3 +60,14 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${CMAKE_SOURCE_DIR}")
 
 add_subdirectory(tests)
 add_subdirectory(examples)
+endif()
+
+add(Z80
+    HEADER_ONLY_LIBRARY
+    FOLDER
+        "Libs"
+    INCLUDE_DIRS
+        "${CMAKE_CURRENT_SOURCE_DIR}"
+    SOURCES
+        z80.h
+    )
