Implemented Z80 loading in the SDL2 runtime.

--- a/Sources/Runtimes/SDL2/CMakeLists.txt
+++ b/Sources/Runtimes/SDL2/CMakeLists.txt
@@ -13,6 +13,8 @@ add(SDL2Runtime
         Common.h
         Cpu.cpp
         Cpu.h
+        Disassembler.cpp
+        Disassembler.h
         Game.cpp
         Game.h
         Memory.cpp
