Extracted emulator code into a separate library.

--- a/Sources/GUI/CMakeLists.txt
+++ b/Sources/GUI/CMakeLists.txt
@@ -12,7 +12,7 @@ add(RetroToolkit
     LIBS
         Common
         Compiler
-        Z80
+        EmulatorCore
         RunTests
     SOURCES
         Resources/resources.qrc
