--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(
 
 add_subdirectory(Common)
 add_subdirectory(Compiler)
+add_subdirectory(Emulator)
 add_subdirectory(GUI)
 add_subdirectory(Java)
 add_subdirectory(Runtimes)
