--- a/Sources/Java/build.xml
+++ b/Sources/Java/build.xml
@@ -84,6 +84,7 @@
         <jar destfile="Build/RetroBuild.jar"
              basedir="Build/Tools"
              includes="**"
+             excludes="**/JNITool*.class"
             >
         </jar>
     </target>
